[gd_scene load_steps=16 format=2]

[ext_resource path="res://sled64.gd" type="Script" id=1]
[ext_resource path="res://Material_001.material" type="Material" id=2]
[ext_resource path="res://ghost_recorder.gd" type="Script" id=3]
[ext_resource path="res://tree_trunk.material" type="Material" id=4]
[ext_resource path="res://audio/snow_loop.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/land_snow.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/leave_snow.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/hit_snowman.wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.05

[sub_resource type="ArrayMesh" id=2]
resource_name = "sled64"
surfaces/0 = {
"aabb": AABB( -3, -1, -6, 6, 1.10001, 12 ),
"array_data": PoolByteArray( 0, 0, 128, 63, 204, 204, 204, 61, 0, 0, 192, 192, 0, 127, 0, 0, 130, 0, 0, 127, 0, 57, 0, 56, 0, 0, 0, 0, 204, 204, 204, 61, 0, 0, 192, 192, 0, 127, 0, 0, 127, 0, 0, 129, 0, 59, 0, 56, 0, 0, 0, 0, 204, 204, 204, 61, 0, 0, 192, 64, 0, 127, 0, 0, 126, 0, 0, 129, 0, 59, 0, 52, 0, 0, 128, 63, 204, 204, 204, 61, 0, 0, 192, 64, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 0, 50, 0, 0, 192, 64, 0, 0, 126, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 204, 204, 204, 61, 0, 0, 192, 64, 0, 0, 126, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 0, 0, 204, 204, 204, 61, 0, 0, 192, 64, 0, 0, 126, 0, 0, 127, 0, 129, 0, 57, 0, 0, 0, 0, 0, 0, 0, 0, 0, 50, 0, 0, 192, 64, 0, 0, 126, 0, 0, 127, 0, 129, 0, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 50, 0, 0, 192, 192, 0, 129, 0, 0, 130, 0, 0, 129, 0, 48, 0, 56, 0, 0, 128, 63, 0, 0, 0, 50, 0, 0, 192, 192, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 0, 50, 0, 0, 192, 64, 0, 129, 0, 0, 126, 0, 0, 127, 0, 54, 0, 52, 0, 0, 0, 0, 0, 0, 0, 50, 0, 0, 192, 64, 0, 129, 0, 0, 129, 0, 0, 129, 0, 48, 0, 52, 0, 0, 128, 63, 0, 0, 0, 50, 0, 0, 192, 192, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 204, 204, 204, 61, 0, 0, 192, 192, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 204, 204, 204, 61, 0, 0, 192, 64, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 0, 50, 0, 0, 192, 64, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 0, 0, 0, 0, 0, 50, 0, 0, 192, 192, 0, 0, 130, 0, 0, 127, 0, 129, 0, 54, 0, 58, 0, 0, 0, 0, 204, 204, 204, 61, 0, 0, 192, 192, 0, 0, 130, 0, 0, 127, 0, 129, 0, 57, 0, 58, 0, 0, 128, 63, 204, 204, 204, 61, 0, 0, 192, 192, 0, 0, 130, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 0, 50, 0, 0, 192, 192, 0, 0, 130, 0, 0, 127, 0, 127, 0, 54, 0, 56, 154, 153, 153, 63, 0, 0, 192, 178, 0, 0, 192, 64, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 60, 154, 153, 153, 63, 208, 204, 204, 61, 0, 0, 192, 64, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 60, 154, 153, 153, 63, 208, 204, 204, 61, 0, 0, 192, 192, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 58, 154, 153, 153, 63, 0, 0, 192, 178, 0, 0, 192, 192, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 58, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 79, 0, 157, 0, 0, 127, 0, 127, 0, 54, 128, 56, 0, 0, 32, 64, 208, 204, 204, 61, 51, 51, 179, 192, 79, 0, 157, 0, 0, 127, 0, 127, 0, 57, 128, 56, 0, 0, 64, 64, 208, 204, 204, 61, 102, 102, 166, 192, 79, 0, 157, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 64, 64, 0, 0, 192, 178, 102, 102, 166, 192, 79, 0, 157, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 64, 64, 0, 0, 192, 178, 102, 102, 166, 192, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 64, 64, 208, 204, 204, 61, 102, 102, 166, 192, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 64, 64, 208, 204, 204, 61, 51, 51, 147, 64, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 64, 64, 0, 0, 192, 178, 51, 51, 147, 64, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 33, 140, 38, 0, 255, 39, 120, 127, 0, 54, 0, 48, 255, 255, 255, 63, 208, 204, 204, 61, 51, 51, 179, 64, 33, 140, 38, 0, 251, 38, 120, 127, 0, 57, 0, 48, 154, 153, 153, 63, 208, 204, 204, 61, 0, 0, 192, 64, 33, 140, 38, 0, 59, 50, 99, 127, 0, 57, 0, 0, 154, 153, 153, 63, 0, 0, 192, 178, 0, 0, 192, 64, 33, 140, 38, 0, 76, 51, 87, 127, 0, 54, 0, 0, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 0, 129, 0, 0, 103, 0, 73, 127, 0, 53, 0, 56, 0, 0, 64, 64, 0, 0, 192, 178, 102, 102, 166, 192, 0, 129, 0, 0, 99, 0, 79, 127, 0, 54, 0, 56, 0, 0, 64, 64, 0, 0, 192, 178, 51, 51, 147, 64, 0, 129, 0, 0, 100, 0, 179, 127, 0, 54, 0, 52, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 0, 129, 0, 0, 99, 0, 177, 127, 0, 53, 0, 52, 255, 255, 255, 63, 208, 204, 204, 61, 205, 204, 188, 192, 0, 127, 0, 0, 130, 0, 244, 127, 255, 57, 0, 56, 154, 153, 153, 63, 208, 204, 204, 61, 0, 0, 192, 192, 0, 127, 0, 0, 130, 0, 241, 127, 0, 59, 0, 56, 154, 153, 153, 63, 208, 204, 204, 61, 0, 0, 192, 64, 0, 127, 0, 0, 141, 0, 52, 127, 0, 59, 0, 52, 255, 255, 255, 63, 208, 204, 204, 61, 51, 51, 179, 64, 0, 127, 0, 0, 143, 0, 56, 127, 0, 58, 0, 52, 154, 153, 153, 63, 0, 0, 192, 178, 0, 0, 192, 192, 0, 129, 0, 0, 126, 0, 10, 127, 0, 48, 0, 56, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 0, 129, 0, 0, 126, 0, 15, 127, 255, 51, 0, 56, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 0, 129, 0, 0, 81, 0, 159, 127, 0, 52, 0, 52, 154, 153, 153, 63, 0, 0, 192, 178, 0, 0, 192, 64, 0, 129, 0, 0, 79, 0, 157, 127, 0, 48, 0, 52, 154, 153, 153, 63, 0, 0, 192, 178, 0, 0, 192, 192, 15, 0, 130, 0, 0, 127, 0, 127, 0, 54, 0, 58, 154, 153, 153, 63, 208, 204, 204, 61, 0, 0, 192, 192, 15, 0, 130, 0, 0, 127, 0, 127, 0, 57, 0, 58, 255, 255, 255, 63, 208, 204, 204, 61, 205, 204, 188, 192, 15, 0, 130, 0, 0, 127, 0, 127, 0, 57, 0, 57, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 15, 0, 130, 0, 0, 127, 0, 127, 0, 54, 0, 57, 0, 0, 64, 64, 0, 0, 192, 178, 51, 51, 147, 64, 79, 0, 99, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 64, 64, 208, 204, 204, 61, 51, 51, 147, 64, 79, 0, 99, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 32, 64, 208, 204, 204, 61, 0, 0, 160, 64, 79, 0, 99, 0, 0, 127, 0, 127, 0, 57, 0, 50, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 79, 0, 99, 0, 0, 127, 0, 127, 0, 54, 0, 50, 0, 0, 64, 64, 208, 204, 204, 61, 102, 102, 166, 192, 0, 127, 0, 0, 156, 0, 179, 127, 0, 57, 0, 56, 0, 0, 32, 64, 208, 204, 204, 61, 51, 51, 179, 192, 0, 127, 0, 0, 157, 0, 177, 127, 128, 57, 0, 56, 0, 0, 32, 64, 208, 204, 204, 61, 0, 0, 160, 64, 0, 127, 0, 0, 153, 0, 73, 127, 128, 57, 0, 52, 0, 0, 64, 64, 208, 204, 204, 61, 51, 51, 147, 64, 0, 127, 0, 0, 157, 0, 79, 127, 0, 57, 0, 52, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 57, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 128, 56, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 128, 56, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 57, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 127, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 127, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 64, 255, 255, 127, 191, 0, 0, 128, 64, 127, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 64, 255, 255, 127, 191, 102, 102, 150, 192, 127, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 50, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 48, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 48, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 50, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 255, 255, 255, 63, 255, 255, 127, 191, 205, 204, 172, 192, 0, 129, 0, 0, 81, 0, 97, 127, 255, 51, 0, 56, 0, 0, 32, 64, 255, 255, 127, 191, 102, 102, 150, 192, 0, 129, 0, 0, 73, 0, 103, 127, 0, 53, 0, 56, 0, 0, 32, 64, 255, 255, 127, 191, 0, 0, 128, 64, 0, 129, 0, 0, 126, 0, 3, 127, 0, 53, 0, 52, 255, 255, 255, 63, 255, 255, 127, 191, 0, 0, 128, 64, 0, 129, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 129, 0, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 129, 0, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 255, 255, 255, 63, 255, 255, 127, 191, 205, 204, 172, 192, 129, 0, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 255, 255, 255, 63, 255, 255, 127, 191, 0, 0, 128, 64, 129, 0, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 50, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 48, 255, 255, 255, 63, 255, 255, 127, 191, 0, 0, 128, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 48, 0, 0, 32, 64, 255, 255, 127, 191, 0, 0, 128, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 50, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 80, 200, 176, 0, 127, 0, 0, 127, 0, 54, 0, 57, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 80, 200, 176, 0, 127, 0, 0, 127, 0, 54, 128, 56, 0, 0, 32, 64, 255, 255, 127, 191, 102, 102, 150, 192, 80, 200, 176, 0, 127, 0, 0, 127, 0, 54, 128, 56, 255, 255, 255, 63, 255, 255, 127, 191, 205, 204, 172, 192, 80, 200, 176, 0, 127, 0, 0, 127, 0, 54, 0, 57, 0, 0, 128, 191, 204, 204, 204, 61, 0, 0, 192, 192, 0, 127, 0, 0, 126, 0, 0, 129, 0, 57, 0, 56, 0, 0, 128, 191, 204, 204, 204, 61, 0, 0, 192, 64, 0, 127, 0, 0, 127, 0, 0, 129, 0, 57, 0, 52, 0, 0, 128, 191, 0, 0, 0, 50, 0, 0, 192, 64, 0, 0, 126, 0, 0, 127, 0, 129, 0, 54, 0, 52, 0, 0, 128, 191, 204, 204, 204, 61, 0, 0, 192, 64, 0, 0, 126, 0, 0, 127, 0, 129, 0, 57, 0, 52, 0, 0, 128, 191, 0, 0, 0, 50, 0, 0, 192, 64, 0, 129, 0, 0, 130, 0, 0, 129, 0, 54, 0, 52, 0, 0, 128, 191, 0, 0, 0, 50, 0, 0, 192, 192, 0, 129, 0, 0, 129, 0, 0, 129, 0, 54, 0, 56, 0, 0, 128, 191, 0, 0, 0, 50, 0, 0, 192, 192, 129, 0, 0, 0, 0, 127, 0, 129, 0, 54, 0, 56, 0, 0, 128, 191, 0, 0, 0, 50, 0, 0, 192, 64, 129, 0, 0, 0, 0, 127, 0, 129, 0, 54, 0, 52, 0, 0, 128, 191, 204, 204, 204, 61, 0, 0, 192, 64, 129, 0, 0, 0, 0, 127, 0, 129, 0, 57, 0, 52, 0, 0, 128, 191, 204, 204, 204, 61, 0, 0, 192, 192, 129, 0, 0, 0, 0, 127, 0, 129, 0, 57, 0, 56, 0, 0, 128, 191, 0, 0, 0, 50, 0, 0, 192, 192, 0, 0, 130, 0, 0, 127, 0, 129, 0, 54, 0, 56, 0, 0, 128, 191, 204, 204, 204, 61, 0, 0, 192, 192, 0, 0, 130, 0, 0, 127, 0, 129, 0, 57, 0, 56, 154, 153, 153, 191, 0, 0, 192, 178, 0, 0, 192, 64, 127, 0, 0, 0, 0, 127, 0, 129, 0, 54, 0, 60, 154, 153, 153, 191, 0, 0, 192, 178, 0, 0, 192, 192, 127, 0, 0, 0, 0, 127, 0, 129, 0, 54, 0, 58, 154, 153, 153, 191, 208, 204, 204, 61, 0, 0, 192, 192, 127, 0, 0, 0, 0, 127, 0, 129, 0, 57, 0, 58, 154, 153, 153, 191, 208, 204, 204, 61, 0, 0, 192, 64, 127, 0, 0, 0, 0, 127, 0, 129, 0, 57, 0, 60, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 177, 0, 157, 0, 0, 127, 0, 129, 0, 54, 128, 56, 0, 0, 64, 192, 0, 0, 192, 178, 102, 102, 166, 192, 177, 0, 157, 0, 0, 127, 0, 129, 0, 54, 0, 56, 0, 0, 64, 192, 208, 204, 204, 61, 102, 102, 166, 192, 177, 0, 157, 0, 0, 127, 0, 129, 0, 57, 0, 56, 0, 0, 32, 192, 208, 204, 204, 61, 51, 51, 179, 192, 177, 0, 157, 0, 0, 127, 0, 129, 0, 57, 128, 56, 0, 0, 64, 192, 0, 0, 192, 178, 102, 102, 166, 192, 129, 0, 0, 0, 0, 127, 0, 129, 0, 54, 0, 56, 0, 0, 64, 192, 0, 0, 192, 178, 51, 51, 147, 64, 129, 0, 0, 0, 0, 127, 0, 129, 0, 54, 0, 52, 0, 0, 64, 192, 208, 204, 204, 61, 51, 51, 147, 64, 129, 0, 0, 0, 0, 127, 0, 129, 0, 57, 0, 52, 0, 0, 64, 192, 208, 204, 204, 61, 102, 102, 166, 192, 129, 0, 0, 0, 0, 127, 0, 129, 0, 57, 0, 56, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 223, 140, 38, 0, 1, 39, 120, 129, 0, 54, 0, 48, 154, 153, 153, 191, 0, 0, 192, 178, 0, 0, 192, 64, 223, 140, 38, 0, 180, 51, 87, 129, 0, 54, 0, 0, 154, 153, 153, 191, 208, 204, 204, 61, 0, 0, 192, 64, 223, 140, 38, 0, 197, 50, 99, 129, 0, 57, 0, 0, 255, 255, 255, 191, 208, 204, 204, 61, 51, 51, 179, 64, 223, 140, 38, 0, 5, 38, 120, 129, 0, 57, 0, 48, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 0, 129, 0, 0, 153, 0, 73, 129, 0, 53, 0, 56, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 0, 129, 0, 0, 157, 0, 177, 129, 0, 53, 0, 52, 0, 0, 64, 192, 0, 0, 192, 178, 51, 51, 147, 64, 0, 129, 0, 0, 156, 0, 179, 129, 0, 54, 0, 52, 0, 0, 64, 192, 0, 0, 192, 178, 102, 102, 166, 192, 0, 129, 0, 0, 157, 0, 79, 129, 0, 54, 0, 56, 255, 255, 255, 191, 208, 204, 204, 61, 205, 204, 188, 192, 0, 127, 0, 0, 126, 0, 244, 129, 255, 57, 0, 56, 255, 255, 255, 191, 208, 204, 204, 61, 51, 51, 179, 64, 0, 127, 0, 0, 113, 0, 56, 129, 0, 58, 0, 52, 154, 153, 153, 191, 208, 204, 204, 61, 0, 0, 192, 64, 0, 127, 0, 0, 115, 0, 52, 129, 0, 59, 0, 52, 154, 153, 153, 191, 208, 204, 204, 61, 0, 0, 192, 192, 0, 127, 0, 0, 126, 0, 241, 129, 0, 59, 0, 56, 154, 153, 153, 191, 0, 0, 192, 178, 0, 0, 192, 192, 0, 129, 0, 0, 130, 0, 10, 129, 0, 48, 0, 56, 154, 153, 153, 191, 0, 0, 192, 178, 0, 0, 192, 64, 0, 129, 0, 0, 177, 0, 157, 129, 0, 48, 0, 52, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 0, 129, 0, 0, 175, 0, 159, 129, 0, 52, 0, 52, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 0, 129, 0, 0, 130, 0, 15, 129, 255, 51, 0, 56, 154, 153, 153, 191, 0, 0, 192, 178, 0, 0, 192, 192, 241, 0, 130, 0, 0, 127, 0, 129, 0, 54, 0, 58, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 241, 0, 130, 0, 0, 127, 0, 129, 0, 54, 0, 57, 255, 255, 255, 191, 208, 204, 204, 61, 205, 204, 188, 192, 241, 0, 130, 0, 0, 127, 0, 129, 0, 57, 0, 57, 154, 153, 153, 191, 208, 204, 204, 61, 0, 0, 192, 192, 241, 0, 130, 0, 0, 127, 0, 129, 0, 57, 0, 58, 0, 0, 64, 192, 0, 0, 192, 178, 51, 51, 147, 64, 177, 0, 99, 0, 0, 127, 0, 129, 0, 54, 0, 52, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 177, 0, 99, 0, 0, 127, 0, 129, 0, 54, 0, 50, 0, 0, 32, 192, 208, 204, 204, 61, 0, 0, 160, 64, 177, 0, 99, 0, 0, 127, 0, 129, 0, 57, 0, 50, 0, 0, 64, 192, 208, 204, 204, 61, 51, 51, 147, 64, 177, 0, 99, 0, 0, 127, 0, 129, 0, 57, 0, 52, 0, 0, 64, 192, 208, 204, 204, 61, 102, 102, 166, 192, 0, 127, 0, 0, 100, 0, 179, 129, 0, 57, 0, 56, 0, 0, 64, 192, 208, 204, 204, 61, 51, 51, 147, 64, 0, 127, 0, 0, 99, 0, 79, 129, 0, 57, 0, 52, 0, 0, 32, 192, 208, 204, 204, 61, 0, 0, 160, 64, 0, 127, 0, 0, 103, 0, 73, 129, 128, 57, 0, 52, 0, 0, 32, 192, 208, 204, 204, 61, 51, 51, 179, 192, 0, 127, 0, 0, 99, 0, 177, 129, 128, 57, 0, 56, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 57, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 57, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 128, 56, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 128, 56, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 129, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 192, 255, 255, 127, 191, 102, 102, 150, 192, 129, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 192, 255, 255, 127, 191, 0, 0, 128, 64, 129, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 129, 0, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 50, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 50, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 48, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 54, 0, 48, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 0, 127, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 56, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 0, 127, 0, 0, 127, 0, 0, 127, 0, 53, 0, 52, 255, 255, 255, 191, 255, 255, 127, 191, 205, 204, 172, 192, 0, 129, 0, 0, 175, 0, 97, 129, 255, 51, 0, 56, 255, 255, 255, 191, 255, 255, 127, 191, 0, 0, 128, 64, 0, 129, 0, 0, 129, 0, 0, 129, 0, 52, 0, 52, 0, 0, 32, 192, 255, 255, 127, 191, 0, 0, 128, 64, 0, 129, 0, 0, 130, 0, 3, 129, 0, 53, 0, 52, 0, 0, 32, 192, 255, 255, 127, 191, 102, 102, 150, 192, 0, 129, 0, 0, 183, 0, 103, 129, 0, 53, 0, 56, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 127, 0, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 191, 255, 255, 127, 191, 0, 0, 128, 64, 127, 0, 0, 0, 127, 0, 0, 127, 0, 52, 0, 52, 255, 255, 255, 191, 255, 255, 127, 191, 205, 204, 172, 192, 127, 0, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 127, 0, 0, 0, 127, 0, 0, 127, 255, 51, 0, 56, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 50, 0, 0, 32, 192, 255, 255, 127, 191, 0, 0, 128, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 50, 255, 255, 255, 191, 255, 255, 127, 191, 0, 0, 128, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 48, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 0, 167, 89, 0, 127, 0, 0, 129, 0, 54, 0, 48, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 176, 200, 176, 0, 127, 0, 0, 127, 0, 54, 0, 57, 255, 255, 255, 191, 255, 255, 127, 191, 205, 204, 172, 192, 176, 200, 176, 0, 127, 0, 0, 127, 0, 54, 0, 57, 0, 0, 32, 192, 255, 255, 127, 191, 102, 102, 150, 192, 176, 200, 176, 0, 127, 0, 0, 127, 0, 54, 128, 56, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 176, 200, 176, 0, 127, 0, 0, 127, 0, 54, 128, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0, 72, 0, 74, 0, 73, 0, 72, 0, 75, 0, 74, 0, 76, 0, 78, 0, 77, 0, 76, 0, 79, 0, 78, 0, 80, 0, 82, 0, 81, 0, 80, 0, 83, 0, 82, 0, 84, 0, 86, 0, 85, 0, 84, 0, 87, 0, 86, 0, 88, 0, 90, 0, 89, 0, 88, 0, 91, 0, 90, 0, 92, 0, 94, 0, 93, 0, 92, 0, 95, 0, 94, 0, 96, 0, 2, 0, 97, 0, 96, 0, 1, 0, 2, 0, 98, 0, 6, 0, 7, 0, 98, 0, 99, 0, 6, 0, 8, 0, 100, 0, 11, 0, 8, 0, 101, 0, 100, 0, 102, 0, 104, 0, 103, 0, 102, 0, 105, 0, 104, 0, 16, 0, 107, 0, 106, 0, 16, 0, 17, 0, 107, 0, 108, 0, 110, 0, 109, 0, 108, 0, 111, 0, 110, 0, 112, 0, 114, 0, 113, 0, 112, 0, 115, 0, 114, 0, 116, 0, 118, 0, 117, 0, 116, 0, 119, 0, 118, 0, 120, 0, 122, 0, 121, 0, 120, 0, 123, 0, 122, 0, 124, 0, 126, 0, 125, 0, 124, 0, 127, 0, 126, 0, 128, 0, 130, 0, 129, 0, 128, 0, 131, 0, 130, 0, 132, 0, 134, 0, 133, 0, 132, 0, 135, 0, 134, 0, 136, 0, 138, 0, 137, 0, 136, 0, 139, 0, 138, 0, 140, 0, 142, 0, 141, 0, 140, 0, 143, 0, 142, 0, 144, 0, 146, 0, 145, 0, 144, 0, 147, 0, 146, 0, 148, 0, 150, 0, 149, 0, 148, 0, 151, 0, 150, 0, 152, 0, 154, 0, 153, 0, 152, 0, 155, 0, 154, 0, 156, 0, 158, 0, 157, 0, 156, 0, 159, 0, 158, 0, 160, 0, 162, 0, 161, 0, 160, 0, 163, 0, 162, 0, 164, 0, 166, 0, 165, 0, 164, 0, 167, 0, 166, 0, 168, 0, 170, 0, 169, 0, 168, 0, 171, 0, 170, 0, 172, 0, 174, 0, 173, 0, 172, 0, 175, 0, 174, 0, 176, 0, 178, 0, 177, 0, 176, 0, 179, 0, 178, 0, 180, 0, 182, 0, 181, 0, 180, 0, 183, 0, 182, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 288,
"material": ExtResource( 4 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 184
}
surfaces/1 = {
"aabb": AABB( -2.5, -2.23517e-08, -5.9, 5.00001, 0.10001, 11.5 ),
"array_data": PoolByteArray( 0, 0, 32, 64, 208, 204, 204, 61, 51, 51, 179, 192, 0, 126, 0, 0, 146, 0, 193, 127, 128, 57, 0, 56, 255, 255, 255, 63, 208, 204, 204, 61, 205, 204, 188, 192, 0, 126, 0, 0, 148, 0, 191, 127, 255, 57, 0, 56, 255, 255, 255, 63, 208, 204, 204, 61, 51, 51, 179, 64, 0, 126, 0, 0, 169, 0, 91, 127, 0, 58, 0, 52, 0, 0, 32, 64, 208, 204, 204, 61, 0, 0, 160, 64, 0, 126, 0, 0, 175, 0, 97, 127, 128, 57, 0, 52, 0, 0, 32, 64, 0, 0, 192, 178, 0, 0, 160, 64, 23, 138, 39, 0, 35, 44, 113, 127, 0, 54, 0, 50, 0, 0, 32, 64, 208, 204, 204, 61, 0, 0, 160, 64, 23, 138, 39, 0, 60, 46, 101, 127, 0, 57, 0, 50, 255, 255, 255, 63, 208, 204, 204, 61, 51, 51, 179, 64, 23, 138, 39, 0, 0, 40, 120, 127, 0, 57, 0, 48, 255, 255, 255, 63, 0, 0, 192, 178, 0, 0, 160, 64, 23, 138, 39, 0, 253, 39, 120, 127, 0, 54, 0, 48, 255, 255, 255, 63, 0, 0, 192, 178, 205, 204, 188, 192, 65, 0, 148, 0, 0, 127, 0, 127, 0, 54, 0, 57, 255, 255, 255, 63, 208, 204, 204, 61, 205, 204, 188, 192, 65, 0, 148, 0, 0, 127, 0, 127, 0, 57, 0, 57, 0, 0, 32, 64, 208, 204, 204, 61, 51, 51, 179, 192, 65, 0, 148, 0, 0, 127, 0, 127, 0, 57, 128, 56, 0, 0, 32, 64, 0, 0, 192, 178, 51, 51, 179, 192, 65, 0, 148, 0, 0, 127, 0, 127, 0, 54, 128, 56, 0, 0, 32, 192, 208, 204, 204, 61, 51, 51, 179, 192, 0, 126, 0, 0, 110, 0, 193, 129, 128, 57, 0, 56, 0, 0, 32, 192, 208, 204, 204, 61, 0, 0, 160, 64, 0, 126, 0, 0, 81, 0, 97, 129, 128, 57, 0, 52, 255, 255, 255, 191, 208, 204, 204, 61, 51, 51, 179, 64, 0, 126, 0, 0, 87, 0, 91, 129, 0, 58, 0, 52, 255, 255, 255, 191, 208, 204, 204, 61, 205, 204, 188, 192, 0, 126, 0, 0, 108, 0, 191, 129, 255, 57, 0, 56, 0, 0, 32, 192, 0, 0, 192, 178, 0, 0, 160, 64, 233, 138, 39, 0, 221, 44, 113, 129, 0, 54, 0, 50, 255, 255, 255, 191, 0, 0, 192, 178, 0, 0, 160, 64, 233, 138, 39, 0, 3, 39, 120, 129, 0, 54, 0, 48, 255, 255, 255, 191, 208, 204, 204, 61, 51, 51, 179, 64, 233, 138, 39, 0, 0, 40, 120, 129, 0, 57, 0, 48, 0, 0, 32, 192, 208, 204, 204, 61, 0, 0, 160, 64, 233, 138, 39, 0, 196, 46, 101, 129, 0, 57, 0, 50, 255, 255, 255, 191, 0, 0, 192, 178, 205, 204, 188, 192, 191, 0, 148, 0, 0, 127, 0, 129, 0, 54, 0, 57, 0, 0, 32, 192, 0, 0, 192, 178, 51, 51, 179, 192, 191, 0, 148, 0, 0, 127, 0, 129, 0, 54, 128, 56, 0, 0, 32, 192, 208, 204, 204, 61, 51, 51, 179, 192, 191, 0, 148, 0, 0, 127, 0, 129, 0, 57, 128, 56, 255, 255, 255, 191, 208, 204, 204, 61, 205, 204, 188, 192, 191, 0, 148, 0, 0, 127, 0, 129, 0, 57, 0, 57 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 36,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="CapsuleShape" id=3]
radius = 0.8
height = 7.42172

[sub_resource type="CapsuleShape" id=4]
radius = 2.35851
height = 5.69237

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.85098, 0.741176, 0.784314, 1 )

[sub_resource type="ParticlesMaterial" id=6]
direction = Vector3( 0, 0, -1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.5, 1, 1.464 )

[node name="body" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0289984, 0.0879059, -0.260352 )
mass = 5.0
physics_material_override = SubResource( 1 )
gravity_scale = 3.0
continuous_cd = true
contacts_reported = 5
contact_monitor = true
linear_damp = 0.05
angular_damp = 0.8
script = ExtResource( 1 )

[node name="ghost_recorder" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ground_check_start" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.349091, 3.03576 )

[node name="ground_check_end" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.75764, 3.03576 )

[node name="sled64" type="MeshInstance" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.328195, 0 )
mesh = SubResource( 2 )
material/0 = null
material/1 = null

[node name="right_bar" type="CollisionShape" parent="."]
transform = Transform( 0.999999, 1.82081e-10, -1.35661e-19, -1.82081e-10, 1, -7.45058e-10, 0, 7.45057e-10, 0.999999, -1.5, 0.280927, -0.147 )
shape = SubResource( 3 )

[node name="left_bar" type="CollisionShape" parent="."]
transform = Transform( 0.999999, 1.82081e-10, -1.35661e-19, -1.82081e-10, 1, -7.45058e-10, 0, 7.45057e-10, 0.999999, 1.5, 0.280927, -0.147 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="snow_loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="snow_land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0

[node name="snow_leave" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.0

[node name="hit_snowman" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="trail_left" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92316, -0.112069, -4.63446 )
material_override = SubResource( 5 )
cast_shadow = 0
emitting = false
amount = 250
lifetime = 5.0
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="trail_right" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.88967, -0.112069, -4.63446 )
material_override = SubResource( 5 )
cast_shadow = 0
emitting = false
amount = 250
lifetime = 5.0
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_body_body_entered"]
[connection signal="on_sled_crash" from="." to="ghost_recorder" method="_on_body_on_sled_crash"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
